[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
externalbase64= { version = "0.13.0", package = "base64" }
bimap = "0.6.2"
bitvec = "1.0.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
rayon = "1.5.3"
